前端修改且和dev合并

--- a/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialoglist_page/dialoglist_page.html
@@ -22,6 +22,7 @@
 			<div id="goback" onclick="backBtn()"><img src="../image/goback5.png" /></div>
 		</div>
 		
+		<div class="dialoglistOut" style="">
 		<div id="dialog_list">
 			<!--  <div class="dialog cursor">
 				<img src="http://www.mxunta.so:80/xunta-web/useravatar/thumb_img_745600342770716672/jpg/image">
@@ -33,6 +34,7 @@
 					<div class="dialog_content_msg">.</div>
 				</div>
 			</div>-->
+		</div>
 		</div>
 	</body>
 	<script type="text/javascript" src="../script/jquery-1.11.3.min.js"></script>
