--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -339,8 +339,8 @@
 			//2017.10.25  叶夷   调整信号圆位置
 			var showOnLineOffLine=$("#showonlineoffline");
 			var showOnLineOffLineWidth=showOnLineOffLine.find("img").width();
-			var showOnLineOffLineTop=userImgMarginTop-4;
-			var showOnLineOffLineLeft=parseInt($(".userimg").css("margin-left"))+userimgHeight-showOnLineOffLineWidth+6;
+			var showOnLineOffLineTop=userImgMarginTop-showOnLineOffLineWidth*0.55;
+			var showOnLineOffLineLeft=parseInt($(".userimg").css("margin-left"))+userimgHeight-showOnLineOffLineWidth;
 			showOnLineOffLine.css("top",showOnLineOffLineTop+"px");
 			showOnLineOffLine.css("left",showOnLineOffLineLeft+"px");
 		}
