在信息没有全显的时候, 会出现一些空框和线条. 这些元素应该先隐藏, 等必要的数据到手后再显出来.

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -338,6 +338,7 @@
 			
 			//2017.10.25  叶夷   调整信号圆位置
 			var showOnLineOffLine=$("#showonlineoffline");
+			showOnLineOffLine.show();
 			var showOnLineOffLineWidth=showOnLineOffLine.find("img").width();
 			var showOnLineOffLineTop=userImgMarginTop-showOnLineOffLineWidth*0.55;
 			var showOnLineOffLineLeft=parseInt($(".userimg").css("margin-left"))+userimgHeight-showOnLineOffLineWidth;
