--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -280,6 +280,7 @@
 			}else{
 				$("#alterUserimage").show();
 			}*/
+			$(".userimg").show();
 			var userimg=$(".userimg>img");
 			userimg.attr("src", userImg);
 			var username=$("#username");
@@ -344,6 +345,10 @@
 			var showOnLineOffLineLeft=parseInt($(".userimg").css("margin-left"))+userimgHeight-showOnLineOffLineWidth;
 			showOnLineOffLine.css("top",showOnLineOffLineTop+"px");
 			showOnLineOffLine.css("left",showOnLineOffLineLeft+"px");
+			
+			//.toastinline刚上线时,  这里会出一个 连接恢复 的提示. 刚上线时的这个提示可以取消.
+			//可以 用 设为不显的 方法 来取消. 等头像出来后, 再设为 显示. 头像出来了, 肯定是连接上了
+			$(".toastinline").show();
 		}
 
 		function retrievePageParams(pageParamsStr){
