--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -343,6 +343,7 @@
 			//2017.10.25  叶夷   调整信号圆位置
 			var showOnLineOffLine=$("#showonlineoffline");
 			showOnLineOffLine.show();
+			//根据屏幕的宽度调整进入聊天列表按钮的大小
 			var showOnLineOffLineWidth=showOnLineOffLine.find("img").width();
 			var showOnLineOffLineTop=userImgMarginTop-showOnLineOffLineWidth*0.55;
 			var showOnLineOffLineLeft=parseInt($(".userimg").css("margin-left"))+userimgHeight-showOnLineOffLineWidth;
@@ -352,6 +353,11 @@
 			//.toastinline刚上线时,  这里会出一个 连接恢复 的提示. 刚上线时的这个提示可以取消.
 			//可以 用 设为不显的 方法 来取消. 等头像出来后, 再设为 显示. 头像出来了, 肯定是连接上了
 			$(".toastinline").show();
+			//进入聊天列表按钮大小
+			var enterdialogList=$("#enterdialogList");
+			var enterdialogListWidth=headerContainerWidth*0.066;
+			enterdialogList.find("img").css("width",enterdialogListWidth);
+			enterdialogList.find("img").css("height",enterdialogListWidth);
 		}
 
 		function retrievePageParams(pageParamsStr){
