聊天页的 共同选择的标签 字体变小两号和字体颜色变成黑色

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -31,7 +31,7 @@
 		
 		<!-- 共同选择过的cp -->
 		<div class="selectCp-container" id="selectCp-container">
-			<div style="text-align:center;color:#f9f8f9;height:20px;line-height:20px;">共同选择的标签</div>
+			<div style="text-align:center;color:black;height:20px;line-height:20px;font-size:14px;">共同选择的标签</div>
 		</div>
 		
 		<div id="dialog_box">
