小绿点大小根据屏幕调整

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -343,6 +343,10 @@
 			//2017.10.25  叶夷   调整信号圆位置
 			var showOnLineOffLine=$("#showonlineoffline");
 			showOnLineOffLine.show();
+			//小绿点大小调整
+			var showOnLineOffLineImgWidth=$(".userimg").width()*0.2438;
+			showOnLineOffLine.find("img").css("width",showOnLineOffLineImgWidth);
+			showOnLineOffLine.find("img").css("height",showOnLineOffLineImgWidth);
 			//根据屏幕的宽度调整进入聊天列表按钮的大小
 			var showOnLineOffLineWidth=showOnLineOffLine.find("img").width();
 			var showOnLineOffLineTop=userImgMarginTop-showOnLineOffLineWidth*0.55;
