我的标签样式问题解决

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -31,9 +31,9 @@
 			<div class="header-container" id="header-container">
 
 				<!-- 重新登录-->
-				<!--div id="showouseroprate">
+				<div id="showouseroprate">
 					<img src="../image/exit.png" onclick="logOff()">
-				</div-->
+				</div>
 				<!-- 信号 -->
 				<div id="showonlineoffline">
 					<img src="../image/dot-gray.png" onclick="wsConnect()">
