将然后把登录的时候点击“下一步”focus在密码框的功能解决

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -37,7 +37,7 @@
 		
         <div id="mobilephone-login-container" >
         <div id="cancel_mobilelogin"><img src="image/goback5.png" style="height: 20px;width: 20px;float:left;margin: 5px;"				onclick="showLogin()"></div>
-	        	<div id="countrycode">+86</div><input id="inputbox_mobileno"  value="请输入手机号" onfocus="if(this.value=='请输入手机号') {this.value=''}" onblur="if(this.value=='') {this.value='请输入手机号'}" onkeypress="inputMobile()"/> 
+	        	<div id="countrycode">+86</div><input id="inputbox_mobileno"  value="请输入手机号" onfocus="if(this.value=='请输入手机号') {this.value=''}" onblur="if(this.value=='') {this.value='请输入手机号'}" onkeypress="inputMobile()" autofocus="autofocus"/> 
 	        	<div id="button_checkonmobileno" onclick="checkonmobileno()"><div id="button_font">下一步</div></div>
 	        	<div class="clear"></div>
 	        	<div id="graphcode"><img src=""/><div id="changegraphcode" onclick="changGraphCode()">换一张</div></div>
