将首页的我的头像和匹配用户的头像都加上获取头像错误时的默认头像

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -41,7 +41,7 @@
 				
 				<!--头像-->
 				<div class="userimg">
-					<img id="topic_img"/>
+					<img id="topic_img" onerror="javascript:this.src='http://42.121.136.225:8888/user-pic2.jpg'"/>
 					<div class="username" id="username"></div>
 				</div>
 				
