1.将首页的左边间距调整解耦 2.小绿点大小和用户头像对比

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -345,7 +345,7 @@
 			var showOnLineOffLine=$("#showonlineoffline");
 			showOnLineOffLine.show();
 			//小绿点大小调整
-			var showOnLineOffLineImgWidth=$(".userimg").width()*0.2438;
+			var showOnLineOffLineImgWidth=userimg.width()*0.2438;
 			showOnLineOffLine.find("img").css("width",showOnLineOffLineImgWidth);
 			showOnLineOffLine.find("img").css("height",showOnLineOffLineImgWidth);
 			//根据屏幕的宽度调整进入聊天列表按钮的大小
