--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -70,7 +70,7 @@
 			<!-- 我的标签 -->
 			<div class="mytag-container" id="mytag-container">
 			<img id="background-rightbar-mytag" src="../image/background1-rightbar.jpg"><!--用来覆盖右边的滚动条 -->
-				<div style="width:37px;height:30px;line-height:28px;" onclick="addTag()" class="mytag add" id="addtag">+</div>
+				<div  class="mytag add" id="addtag" onclick='addTag()'>+</div>
 				<!-- <div class="mytag"><img src="../image/acclaim-50x173.png"><span>阿斯蒂芬8后</span></div> -->
 				<!-- <div class="mytag" id="addtag2" onclick="addTag()" style="width:86px;"> 万有引力 					
 					<div class="mytag-selectednumber">123</div>
