解决了输入框与回车按钮之间的间距过大,只针对pc.以及对话页中因为我的标签栏使整体下沉压住输入框的问题.

--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -23,7 +23,7 @@
 		<!--div id="notification">通知栏</div-->
 		<div id="header">
 			<span id="title">
-			LKJ;LKJ
+			(昵称怎以没有读取到呢?)
 			</span>
 <div id="goback" onclick="backBtn()"><img src="../image/goback6.png" /></div>
 				
@@ -142,7 +142,6 @@
          
     		//暂时取消,换成下面两句:prepareDialogPage();
     		showTitle();
-    		//showTitle();
     		sort = 'asc';
 			//这里没几句,暂时移到了上面.方法暂时注销.prepareDialogPage();//
             execRoot("setCurrentPageId('"+toUserId+"')");
