将遮盖滚动条的图片注释

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -71,7 +71,7 @@
 
 			<!-- 我的标签 -->
 			<div class="mytag-container" id="mytag-container">
-			<img id="background-rightbar-mytag" src="../image/background1-rightbar.jpg"><!--用来覆盖右边的滚动条 -->
+			<!--<img id="background-rightbar-mytag" src="../image/background1-rightbar.jpg">用来覆盖右边的滚动条 -->
 				<div  class="mytag" id="addtag" onclick='addTag()'>
 					<!-- img src="../image/plus3.jpg"-->
 				</div>
@@ -86,7 +86,7 @@
 		</div>
 		
 		<div class="tag-container" id="tag-container">
-		<img id="background-rightbar" src="../image/background1-rightbar.jpg"><!--用来覆盖右边的滚动条 -->
+		<!--<img id="background-rightbar" src="../image/background1-rightbar.jpg">用来覆盖右边的滚动条 -->
 			<!-- CP容器的HTLM标范,不要删,用于css调试 -->
 			<div id="cp-show" class="othertag">
 				<div id="cp-container" style="/*  position:fixed; */ width:100%;">
