--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -374,7 +374,7 @@
 			
 			//.toastinline刚上线时,  这里会出一个 连接恢复 的提示. 刚上线时的这个提示可以取消.
 			//可以 用 设为不显的 方法 来取消. 等头像出来后, 再设为 显示. 头像出来了, 肯定是连接上了
-			$(".toastinline").show();
+			//$(".toastinline").show();
 			//进入聊天列表按钮大小
 			/*var enterdialogList=$("#enterdialogList");
 			var enterdialogListWidth=headerContainerWidth*0.066;
