直接在dev上取消 退出 按钮. (我的版本去掉了, 但合并后,总是不起作用.可能被认为我的版本是旧的)

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -31,9 +31,9 @@
 			<div class="header-container" id="header-container">
 
 				<!-- 重新登录-->
-				<div id="showouseroprate">
+				<!-- div id="showouseroprate">
 					<img src="../image/exit.png" onclick="logOff()">
-				</div>
+				</div-->
 				
 				<!--头像-->
 				<div id="userinfo">
