将火狐浏览器遮盖滚动条的方法先取消，因为会出现滚动不了的问题

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -472,13 +472,15 @@
 		}
 		
 		//解决滚动条隐藏在火狐浏览器不兼容的问题
-		$("#cp-show").niceScroll({ 
+		/** $("#cp-show").niceScroll({ 
 			cursorwidth:"0px", 
-			cursorborder:"0"
+			cursorborder:"none",
+			horizrailenabled:true
 		})
 		$("#mytag-container").niceScroll({ 
 			cursorwidth:"0px", 
-			cursorborder:"0"
-		})
+			cursorborder:"none",
+			horizrailenabled:true
+		}) */
 	</script>
 </html>
