1.将手机页面只出现的上边和左边间隙去除  2.将IE浏览器滚动条隐藏问题解决，但是火狐浏览器还没解决

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -472,15 +472,14 @@
 		}
 		
 		//解决滚动条隐藏在火狐浏览器不兼容的问题
-		/** $("#cp-show").niceScroll({ 
-			cursorwidth:"0px", 
-			cursorborder:"none",
-			horizrailenabled:true
+		/* $("#cp-show").niceScroll({ 
+			cursorwidth:"0px",
+			//cursorborder:"none",
+			horizrailenabled: true
 		})
 		$("#mytag-container").niceScroll({ 
-			cursorwidth:"0px", 
-			cursorborder:"none",
-			horizrailenabled:true
+			cursorwidth:"0px"
+			//cursorborder:"none",
 		}) */
 	</script>
 </html>
