--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -328,70 +328,7 @@
 			//userimg.css("height",userimgHeight);//图片高宽一致
 			
 			//2017.10.25 叶夷   用户昵称如果超过3个字则加上...
-			var userNameText=userName;
-			//userNameText = "用户呢称遥远看再看一看看两看三";
-			var usernameLength=strLength(userNameText);
-			var userNameTextSizeMax = userImgWidth/5;//头像下一排最多只能排6个字.两排最多12个字.
-			var userNameTextSize = userImgWidth/8;
-			var userNameTextSizeMin=11;//头像下一排最多只能排6个字.两排最多12个字.
-			var maxTextNumber=0;
-			if(usernameLength*(userNameTextSizeMax+1)<=userImgWidth){
-				userNameTextSize = userNameTextSizeMax;
-			}else if(usernameLength*(userNameTextSizeMin+1)<=userImgWidth){
-				//userNameTextSize = userNameTextSizeMin;
-				userNameTextSize = (userImgWidth-usernameLength*1)/usernameLength;
-				/*maxTextNumber = userImgWidth/userNameTextSize;
-				if(usernameLength>maxTextNumber){
-					userNameText=userNameText.substring(0,maxTextNumber-1)+"…";
-				}*/
-			}else if(usernameLength*userNameTextSizeMin<userImgWidth*1.3){
-				userNameTextSize = userNameTextSizeMin;
-				maxTextNumber = userImgWidth/userNameTextSize;
-				if(usernameLength>maxTextNumber){
-					userNameText=userNameText.substring(0,maxTextNumber-1)+"…";
-				}
-			}else if(usernameLength*userNameTextSizeMin < userImgWidth*2){
-				maxTextNumber = (userImgWidth*2-usernameLength*1)/userNameTextSize;
-				if(usernameLength>maxTextNumber){
-					userNameText=userNameText.substring(0,maxTextNumber-1)+"…";
-				}
-			}else if(usernameLength*userNameTextSizeMin >= userImgWidth*2){
-				userNameTextSize = userNameTextSizeMin;
-				//maxTextNumber = (userImgWidth*2-usernameLength*1)/userNameTextSize;
-				maxTextNumber = userImgWidth*2/userNameTextSize;
-				if(usernameLength>maxTextNumber){
-					userNameText=userNameText.substring(0,maxTextNumber-1)+"…";
-				}	
-			}
-			
-			console.log("======userNameTextSize1======="+userNameTextSize);
-			//不让让字体太小,也不能太大
-			//if(userNameTextSize<=11){
-				//userNameTextSize=11;
-			//}
-			/*
-			maxTextNumber = userImgWidth*2/userNameTextSize;
-						if(usernameLength>maxTextNumber){
-				userNameText=userNameText.substring(0,maxTextNumber-3)+"…";
-			} */
-			
-			//如果字体小于12的时候，将昵称截断
-			/*	var substringLength=userimgHeight/userNameTextSize;
-				userNameText=userNameText.substring(0,substringLength)+"...";
-				userNameTextSize=16;
-*/
-			//2017.10.25  叶夷  将昵称的大小调整
-			var userNameObj=$("#username");
-			userNameObj.css("font-size",userNameTextSize+"px");
-			//username.css("font-size","18px");
-			console.log("======userNameTextSize======="+userNameTextSize);
-			
-			//usernameHeight=parseInt(userImgHeight)-parseInt(userimgHeight);
-			//username.css("height",(userNameTextSize+10)+"px");//这里加6是高度比字体的大小大约多了6个像素
-			//var usernameMaiginTop=(usernameHeight-6-userNameTextSize-6)/2;
-			//username.css("margin-top",usernameMaiginTop+"px");
-			userNameObj.text(userNameText);
-
+			userNameTextAdj($("#username"),userName,userImgWidth);//将昵称文字个数及大小的计算及css设置独立放到这个方法中.
 			
 			//2017.10.25  叶夷   调整信号圆位置
 			var showOnLineOffLine=$("#showonlineoffline");
@@ -416,6 +353,70 @@
 			enterdialogList.find("img").css("width",enterdialogListWidth);
 			enterdialogList.find("img").css("height",enterdialogListWidth);
 			*/
+		}
+		
+		function userNameTextAdj(userNameObj,userNameText,userImgWidth){
+			userNameObj.hide();
+			//userNameText = "NameOju用户用户merNameOju用户用";
+			//先隐藏. 设最大文字,最小文字(可以比11px小一些).
+			/*先让昵称文字最大
+				如果一行,则结束
+				如果一行以上,则变小,回到上行,如果文字已最小,则结束.
+				
+				如果两行以上,则减字到刚好两行.
+				如果一行半到两行之间,则结束
+				如果一行到一行半之间,则减字到刚好一行.*/
+			//var usernameLength=strLength(userNameText);
+			var sizeMax = userImgWidth/5;//头像下一排最多只能排6个字.两排最多12个字.
+			
+			var sizeMin=10;//头像下一排最多只能排6个字.两排最多12个字.
+			//var maxTextNumber=0;
+			var textSize = sizeMax;
+			var lineNum=0;
+			for(textSize = sizeMax; textSize >= sizeMin;textSize=textSize-1) {
+				lineNum = getTextLineNum(userNameObj,textSize,userNameText);
+				if (lineNum == 1) {
+					break;
+				}
+			}
+			
+			if (lineNum != 1){
+				reduceTextNum(userNameObj,textSize,userNameText,lineNum);
+				/*
+				var finalUserNmTxt = reduceTextNum(userNameObj,textSize,userNameText);
+				finalUserNmTxt = finalUserNmTxt.substr(0,finalUserNmTxt.length-1)+" …";
+				setUserNameCSS(userNameObj,textSize,finalUserNmTxt);
+				*/
+			}
+			userNameObj.show();
+			
+			function getTextLineNum(userNameObj,textSize,text){
+				setUserNameCSS(userNameObj,textSize,text);
+				var userNmHeight = parseInt(userNameObj.css("height"));//
+				if (userNmHeight < textSize*1.8) {return 1;}
+				if (userNmHeight > textSize*2 && userNmHeight < textSize*3) {return 2;}
+				if (userNmHeight > textSize*3) {return 3;}
+			}
+			
+			function reduceTextNum(userNameObj,textSize,text,lineNum){
+				var textHasEnd = text + "end";
+				var lineNumBefore = lineNum;
+				var lineNumAfter;
+				for(var i=0;i<1000;i++) {
+					//lineNumBefore = getTextLineNum(userNameObj,textSize,textHasEnd);
+					text = text.substr(0,text.length-1);
+					lineNumAfter = getTextLineNum(userNameObj,textSize,text+" …");
+					if (lineNumAfter < lineNumBefore){
+						return text+" …";
+					}
+				}
+			}
+			
+			function setUserNameCSS(userNameObj,userNameTextSize,text){
+				userNameObj.css("font-size",userNameTextSize+"px");
+				userNameObj.text(text);	
+			}
+			
 		}
 
 		function retrievePageParams(pageParamsStr){
