--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -87,6 +87,8 @@
     <script type="text/javascript" src="../script/common-xunta_web.js"></script>
     <script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
+	<!-- 这是为了移动端web的调试 -->
+	<script src="../script/debuggap.js" type="text/javascript"></script>
 
 	<script type="text/javascript">
 		var userId;//发送的人，即自己
@@ -118,7 +120,9 @@
 		var replyOpptid = "";
 		
         function start(Parameter){//web:在openWin时通过ready后回调,再跨页执行方式来启动的第一个方法.
-            domain = Parameter.server_domain;
+        	log2root("测试1:"+$("body").height());
+        	
+        	domain = Parameter.server_domain;
             userId = Parameter.userid;
             userName = Parameter.userName;
             userImage = Parameter.userImage;
