--- a/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
+++ b/xunta-web/src/main/webapp/client_code/dialog_page/dialog_page.html
@@ -87,8 +87,8 @@
     <script type="text/javascript" src="../script/common-xunta_web.js"></script>
     <script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
-	<!-- 这是为了移动端web的调试 -->
-	<script src="../script/debuggap.js" type="text/javascript"></script>
+	<!-- 这是为了移动端web的调试 
+	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 
 	<script type="text/javascript">
 		var userId;//发送的人，即自己
