--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -148,8 +148,8 @@
 	<script type="text/javascript" src="../script/popup.js"></script>
 	<script type="text/javascript" src="../script/popcontext.js"></script>
 	<script type="text/javascript" src="http://xunta.so:3000/javascripts/websocket.io.js"></script>
-	<!-- 这是为了移动端web的调试 -->
-	<script src="../script/debuggap.js" type="text/javascript"></script>
+	<!-- 这是为了移动端web的调试 
+	<script src="../script/debuggap.js" type="text/javascript"></script>-->
 	
 	
 	<script type="text/javascript">
