调整了我的标签栏左右空隙. 让标签之间的空隙设在右端, 这样左端就容易与头像和下圆签对齐.

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -356,7 +356,7 @@
 		}
 		
 		function userNameTextAdj(userNameObj,userNameText,userImgWidth){
-			userNameObj.hide();
+			userNameObj.show();
 			//userNameText = "NameOju用户merNameOjumerNammerNam";
 			//先隐藏. 设最大文字,最小文字(可以比11px小一些).
 			/*先让昵称文字最大
