将打开聊天页面时未读消息无法去除问题解决，但是无法使聊天列表中别的未读消息颜色变暗，这是因为每次从聊天页回退到聊天列表时重新请求聊天列表信息导致的，如果有时间将重新请求聊天列表信息放在发送消息的地方

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -241,6 +241,7 @@
             		//聊天列表未读消息提示
             		if(window.parent.document.getElementById("dialoglist_page")!=null ){//聊天列表打开过
             			exec("dialoglist_page", "unreadMsg('"+user+"','"+data+"','"+postTimeStr+"','"+respondeUserId+"','"+1+"')");
+            			exec("dialoglist_page", "dialogListExistAddunreadObjList('"+user+"','"+data+"','"+postTimeStr+"','"+respondeUserId+"','"+1+"')");
             		}else{//聊天页表没有打开才将未读信息保存好
             			//2017.08.16   装所有的未读信息，为了将数组传给聊天列表
                 		var unreadNum=1;
