--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -105,7 +105,8 @@
     <script type="text/javascript" src="index_page/index_web.js"></script>
      <script type="text/javascript" src="index_page/index.js"></script>
      <script type="text/javascript" src="script/popup.js"></script>
-     
+    <!--2017.11.14 叶夷  微信JS-SDK是微信公众平台面向网页开发者提供的基于微信内的网页开发工具包。在需要调用JS接口的页面引入如下JS文件 -->
+    <script type="text/javascript" src="http://res.wx.qq.com/open/js/jweixin-1.2.0.js"></script>
      
 <!--body以上完全相同-->
 	<script type="text/javascript">
@@ -234,5 +235,79 @@
 			$("#inputbox_password2login").focus(); */
 		}
 	}
+	
+	$.ajax({
+        url : "http://" + domain + "/xunta-web/sendShareLinksMsg",
+        action : "post",
+        contentType : "application/x-www-form-urlencoded; charset=utf-8",
+        dataType : "jsonp",
+        jsonp : 'callback',
+        jsonpCallback : "success_save_user", //自定义的jsonp回调函数名称，默认为jQuery自动生成的随机函数名
+        data : {url:"www.mxunta.so" },
+        async : false,
+        success : function(data, textStatus) {
+        	wx.config({
+                debug: false,////生产环境需要关闭debug模式
+                appId: "wxdac88d71df6be268",//appId通过微信服务号后台查看
+                timestamp: data.timestamp,//生成签名的时间戳
+                nonceStr: data.nonceStr,//生成签名的随机字符串
+                signature: data.signature,//签名
+                jsApiList: [//需要调用的JS接口列表
+                    'checkJsApi',//判断当前客户端版本是否支持指定JS接口
+                    'onMenuShareTimeline',//分享给好友
+                    'onMenuShareAppMessage'//分享到朋友圈
+                ]
+            });
+        },
+        error : function(data, textStatus) {
+            console.log("微信JS-SDK验证信息获取失败");
+            log2root("微信JS-SDK验证信息获取失败");
+        }
+    });
+	
+	wx.ready(function () {
+        var link = "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.mxunta.so%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect";
+        var protocol = window.location.protocol;
+        var host = window.location.host;
+        //分享朋友圈
+        wx.onMenuShareTimeline({
+            title: 'xunta',
+            link: link,
+            imgUrl: '',// 自定义图标
+            trigger: function (res) {
+                // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回.
+                //alert('click shared');
+            },
+            success: function (res) {
+                //alert('shared success');
+                //some thing you should do
+            },
+            cancel: function (res) {
+                //alert('shared cancle');
+            },
+            fail: function (res) {
+                //alert(JSON.stringify(res));
+            }
+        });
+      	//分享给好友
+        wx.onMenuShareAppMessage({
+            title: 'xunta', // 分享标题
+            desc: '这是一个自定义的描述！', // 分享描述
+            link: link, // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
+            imgUrl:'', // 自定义图标
+            type: 'link', // 分享类型,music、video或link，不填默认为link
+            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            success: function () {
+                // 用户确认分享后执行的回调函数
+            },
+            cancel: function () {
+                // 用户取消分享后执行的回调函数
+            }
+        });
+        wx.error(function (res) {
+        	log2root("微信JS-SDK连接失败");
+        	console.log("微信JS-SDK连接失败");
+        });
+    });
 	</script>
 </html>
