--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -241,7 +241,6 @@
 	/**2017.11.15 发送微信分享链接自定义消息给后台*/
 	function sendWeChatShareLinkMsg(){
 		var url= location.href.split('#').toString();
-		alert("url="+url);
 		console.log("发送微信分享链接自定义消息给后台");
 		log2root("发送微信分享链接自定义消息给后台");
 		$.ajax({
@@ -255,7 +254,7 @@
 	        async : false,
 	        success : function(data, textStatus) {
 	        	wx.config({
-	                debug: true,////生产环境需要关闭debug模式
+	                debug: false,////生产环境需要关闭debug模式
 	                appId: "wxdac88d71df6be268",//appId通过微信服务号后台查看
 	                timestamp: data.timestamp,//生成签名的时间戳
 	                nonceStr: data.nonceStr,//生成签名的随机字符串
@@ -267,7 +266,7 @@
 	                ]
 	            });
 	        	wx.ready(function () {
-	        		alert("微信JS-SDK成功");
+	        		//alert("微信JS-SDK成功");
 	        		log2root("微信JS-SDK成功");
                 	console.log("微信JS-SDK连接成功");
 	        		
@@ -277,7 +276,7 @@
 	                //分享朋友圈
 	                wx.onMenuShareTimeline({
 	                    title: 'xunta',
-	                    link: link,
+	                    link: url,
 	                    imgUrl: '',// 自定义图标
 	                    trigger: function (res) {
 	                        // 不要尝试在trigger中使用ajax异步请求修改本次分享的内容，因为客户端分享操作是一个同步操作，这时候使用ajax的回包会还没有返回.
@@ -296,12 +295,23 @@
 	                });
 
 	    			//分享给好友
-	              	timeOutSuccess = setTimeout(function() {
-	              		shareAppMessage();
-	              	},2000);
+	              	wx.onMenuShareAppMessage({
+            			title: 'xunta', // 分享标题
+            			desc: '这是一个自定义的描述！', // 分享描述
+           				link: url,
+            			imgUrl:"http://www.mxunta.so:80/xunta-web/useravatar/thumb_img_804622010041896960/jpg/image", // 自定义图标
+            			type: 'link', // 分享类型,music、video或link，不填默认为link
+            			dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
+            			success: function () {
+            				//alert('shared success'+link);
+            			},
+            			cancel: function () {
+            				//alert('shared cancle'+link);
+           				}
+        			});
 	                
 	                wx.error(function (res) {
-	                	alert("微信JS-SDK连接失败");
+	                	//alert("微信JS-SDK连接失败");
 	                	log2root("微信JS-SDK连接失败");
 	                	console.log("微信JS-SDK连接失败");
 	                });
@@ -313,23 +323,6 @@
 	            log2root("微信JS-SDK验证信息获取失败");
 	        }
 	    });
-	}
-	//分享给朋友
-	function shareAppMessage(){
-		wx.onMenuShareAppMessage({
-            title: 'xunta', // 分享标题
-            desc: '这是一个自定义的描述！', // 分享描述
-            link: "https://open.weixin.qq.com/connect/oauth2/authorize?appid=wxdac88d71df6be268&redirect_uri=http%3a%2f%2fwww.mxunta.so%2fwxpnCallback&response_type=code&scope=snsapi_userinfo&state=1#wechat_redirect", // 分享链接，该链接域名或路径必须与当前页面对应的公众号JS安全域名一致
-            imgUrl:"http://www.mxunta.so:80/xunta-web/useravatar/thumb_img_804622010041896960/jpg/image", // 自定义图标
-            type: 'link', // 分享类型,music、video或link，不填默认为link
-            dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
-            success: function () {
-            	alert('shared success'+link);
-            },
-            cancel: function () {
-            	alert('shared cancle'+link);
-            }
-        });
 	}
 	</script>
 </html>
