分享给朋友的微信链接完成

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -270,7 +270,7 @@
 	        		log2root("微信JS-SDK成功");
                 	console.log("微信JS-SDK连接成功");
 	        		
-	                var link = url+"/wxShareLinksLogin";
+	                var link = "http://www.mxunta.so/wxShareLinksLogin";
 	                var protocol = window.location.protocol;
 	                var host = window.location.host;
 	                //分享朋友圈
