--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -319,7 +319,7 @@
             			type: 'link', // 分享类型,music、video或link，不填默认为link
             			dataUrl: '', // 如果type是music或video，则要提供数据链接，默认为空
             			success: function () {
-            				alert('shared success'+imgUrl);
+            				//alert('shared success'+imgUrl);
             			},
             			cancel: function () {
             				//alert('shared cancle'+link);
