解决圆标签区与我的标签区重叠的问题. 临时解决, 等改进.

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -368,6 +368,7 @@
 			createSampleMyTag();//先生成一个mytag元素样本. 并设置css,主要是文字大小. xu
 			setMyTagContainerCSS();//根据.mytag高度决定container有容纳三行的高度.
 			setAddMyTagCSS(); //根据samplemytag设置加钮的大小.
+			setTagContainerHeight();
 			
 		}
 
