修改发送微信朋友圈的描述

--- a/xunta-web/src/main/webapp/client_code/index.html
+++ b/xunta-web/src/main/webapp/client_code/index.html
@@ -291,7 +291,7 @@
 	                var host = window.location.host;
 	                //分享朋友圈
 	                wx.onMenuShareTimeline({
-	                    title: '寻Ta',
+	                    title: '寻Ta-发出"心语", 找到心灵相通的Ta',
 	                    link: link,
 	                    imgUrl: imgUrl,// 自定义图标
 	                    trigger: function (res) {
