1.前端发送消息接口注册时加上log打印，方便查看出错原因

--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -211,6 +211,8 @@
 			//requestMyCP();
 			
 			chat.init(userId,recevier);//注册用户，及用记接收消息的函数
+			console.log("发送消息接口注册用户成功："+userId);
+        	log2root("发送消息接口注册用户成功："+userId);
 			
 			//console.log("测试："+window.screen.width+" "+window.screen.height);
 			
