--- a/xunta-web/src/main/webapp/client_code/main_page/main_page.html
+++ b/xunta-web/src/main/webapp/client_code/main_page/main_page.html
@@ -225,6 +225,8 @@
 			
 		}
 		
+		//2017.11.22 叶夷  存储所有匹配人的信息
+		var allMatchUserList=new Array();
 		
 		//发送消息之后服务器返回的消息
         function recevier(obj) {
@@ -254,9 +256,19 @@
         			var str = "judgeSelfPosterReturnOrOthers('" + window_id + "','" + msgId + "','" + postTimeLong +"','" +postTimeStr +"')";
         		    execRoot(str);
         		    
+        		    //2017.11.22 叶夷 因为自己发送的消息后台没有返回接收着的name,imgurl，所以为了实现聊天列表置顶，用一个数组将匹配人的信息存储，然后在这里可以查找到
+        		    var toUserName,toImgUrl;
+        		    for(var user in allMatchUserList){
+        				if(allMatchUserList[user].userid==window_id){
+        					toUserName=allMatchUserList[user].username;
+        					toImgUrl=allMatchUserList[user].img_src;
+        					break;
+        				}
+        			}
+        		    
         		    if(window.parent.document.getElementById("dialoglist_page")!=null ){//聊天列表打开过,实现置顶
-        		    	exec("dialoglist_page", "updateDialogContentAndTime('"+user+"','"+imgUrl+"','"+data+"','"+postTimeStr+"','"+window_id+"')");//更新聊天列表内容和时间
-            			exec("dialoglist_page", "makeDialogListTop('" + user+"','"+imgUrl+"','"+window_id +"')");
+        		    	exec("dialoglist_page", "updateDialogContentAndTime('"+toUserName+"','"+toImgUrl+"','"+data+"','"+postTimeStr+"','"+window_id+"')");//更新聊天列表内容和时间
+            			exec("dialoglist_page", "makeDialogListTop('" + toUserName+"','"+toImgUrl+"','"+window_id +"')");
             		}
             	} else { 
             		myOrOther="other";
